--- a/.github/workflows/generate-and-release.yml
+++ b/.github/workflows/generate-and-release.yml
@@ -16,5 +16,5 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           artifacts: 'dist/*.json'
-          artifactContentType: 'artifactContentType'
+          artifactContentType: 'application/json'
           generateReleaseNotes: true
